# ugit

./: .gitignore  Cargo.toml  README.md
src/: author.rs  blob.rs  cli.rs  cmd.rs  commit.rs  database.rs  entry.rs  lib.rs  main.rs  refs.rs  repo.rs  tree.rs  tree_entry.rs  util.rs  workspace.rs
src/cmd/: add.rs  branch.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  status.rs  switch.rs
src/command/: add.rs  base.rs  branch.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  status.rs  switch.rs
src/command/shared/: mod.rs  write_commit.rs
src/database/: author.rs  blob.rs  commit.rs  gcommit.rs  mod.rs  parse.rs  tree.rs
src/index/: index_entry.rs  mod.rs
src/repo/: inspector.rs  log_list.rs  migration.rs  mod.rs
src/repository/: inspector.rs  log_list.rs  migration.rs  mod.rs  status.rs
