[package]
name = "ugit"
version = "0.1.0"
edition = "2021"
about = "A simple version control system written in Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ugit"
path = "src/main.rs"


[[bin]]
name = "tt"
path = "src/bin/tt.rs"

[[bin]]
name = "t"
path = "src/bin/t.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features=["derive"]}
flate2 = "1.0.28"
hex = "0.4.3"
sha1 = "0.10.6"
indexmap = "2.1.0"
