[package]
name = "ugit"
version = "0.1.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ugit"
path = "src/main.rs"


[[bin]]
name = "tt"
path = "src/bin/tt.rs"

[[bin]]
name = "t"
path = "src/bin/t.rs"
[[bin]]
name= "diff"
path = "src/bin/diff.rs"


[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features=["derive"]}
flate2 = "1.1.2"
hex = "0.4.3"
sha1 = "0.10.6"
indexmap = "2.1.0"
tracing = "0.1.41"
tracing-subscriber ={version = "0.3.19"}
termcolor = "1.4.1"
similar = "2.7.0"
atty = "0.2.14"
